# cas-visualizer

./: .gitignore  .pre-commit-config.yaml  README.md  min_working_example.html  pyproject.toml
.github/workflows/: lint.yml  test.yml  type-check.yml
cas_visualizer/: __init__.py  _base.py  api.py  dependency.py  example.py  heatmap.py  min_working_example.py  spacy_helper.py  span.py  table.py  util.py  visualizer.py  visualizer2.py  visualizer_old.py
data/: SWI01_fD_Es145_p.xmi  SWI03_fD_Mo107_c.xmi  TypeSystem.xml  dakoda_typesystem.xml  hagen.txt.xmi
examples/: dependency.py  dependency_visualizer_example.py  docx.py  example.py  heatmap.py  spacy_visualization_example.py  span.py  span_visualizer_example.py  table.py  table_visualizer_example.py
tests/: fixtures.py  test_dependency_visualizer.py  test_heatmap_visualizer.py  test_span_visualizer.py  test_table_visualizer.py  test_util.py  test_visualizer.py
