[tool.poetry]
name = "cas-visualizer"
version = "0.1.0"
description = ""
authors = ["Torsten Zesch <torsten.zesch@gmail.com>"]
readme = "README.md"
packages = [{include = "cas_visualizer"}]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.25.0"
pandas = "^2.0.2"
streamlit = "^1.23.1"
altair = "^5.0.1"
watchdog = "^3.0.0"
dkpro-cassis = "^0.7.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
